--- a/privacy policy.html
+++ b/privacy policy.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="robots" content="noindex">
+    <title>Privacy Policy</title>
+</head>
+<body>
 <style>
   [data-custom-class='body'], [data-custom-class='body'] * {
           background: transparent !important;
@@ -50,5 +58,7 @@ word-break: break-word !important;
         font-family: Arial ;
       }
     </style>
-      </div>
+      </div></body>
+</html>
+
       
